Implement JWT authentication with access and refresh tokens, update user model to include roles, and enhance registration and login endpoints