@@ -1,13 +1,16 @@
 package com.ist.idp.model;
 
+import com.ist.idp.enums.Role;
 import jakarta.persistence.*;
 import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Getter
 @Setter
@@ -27,6 +30,10 @@ public class User implements UserDetails {
 
     private String password;
 
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
+    private Role role;
+
     @Column(name = "email_verified")
     private boolean emailVerified = false;
 
@@ -38,43 +45,34 @@ public class User implements UserDetails {
     @Column(name = "otp_generated_time")
     private LocalDateTime otpGeneratedTime;
 
-    // --- UserDetails Methods ---
-    // These methods are required by Spring Security. For now, we'll use simple implementations.
-    // We will enhance roles/authorities in the "Bonus" section later.
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // For now, we are not implementing roles. Return an empty list.
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
 
     @Override
     public String getUsername() {
-        // In our system, the email is the username.
         return email;
     }
 
     @Override
     public boolean isAccountNonExpired() {
-        // For now, accounts never expire.
         return true;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        // For now, accounts are never locked.
         return true;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        // For now, credentials never expire.
         return true;
     }
 
     @Override
     public boolean isEnabled() {
-        // An account is enabled only if the email has been verified.
         return emailVerified;
     }
 }
